--- a/blind75.ipynb
+++ b/blind75.ipynb
@@ -97,7 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"helloword\")"
+    "print(\"helloword\")\n",
+    "print(\"hellosuka\")\n"
    ]
   }
  ],
