--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -156,9 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -166,7 +175,7 @@
     "\n",
     "\n",
     "array = [ 7,12,9,11,3 ]\n",
-    "minval = array[4]\n",
+    "minval = array[0]\n",
     "for element in array:\n",
     "    if element < minval:\n",
     "        minval = element\n",
@@ -233,9 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 5th Fibonacci number is 5\n"
+     ]
+    }
+   ],
    "source": [
     "def fibonacci(n):\n",
     "    if n == 0:  # Base case 1\n",
@@ -253,17 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 2584 4181 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number = int(input(\"Enter the number of terms: \"))\n",
     "a, b = 0, 1\n",
@@ -274,17 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sum of positive Fibonacci numbers in the range is: 18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fibonacci_upto_n(n):\n",
     "    # Initialize the first two Fibonacci numbers\n",
@@ -310,18 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sum_even_fibonacci(n):\n",
     "    # Initialize the first two even Fibonacci numbers\n",
@@ -340,6 +332,99 @@
     "for _ in range(t):\n",
     "    n = int(input())  # Each test case provides a value N\n",
     "    print(sum_even_fibonacci(n))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "if n<=0:\n",
+    "    print(\"0\")\n",
+    "a,b = 0,1\n",
+    "total=a+b\n",
+    "for i in range(2,n):\n",
+    "    a,b = b,a+b\n",
+    "    total = total+b\n",
+    "print(total)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = [1,2,3]\n",
+    "t = 0\n",
+    "for i in n:\n",
+    "    t = t+i\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LCM OF ARRAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "from math import gcd\n",
+    "\n",
+    "# Input array\n",
+    "arr = [1,2,3,4]\n",
+    "\n",
+    "# Calculate LCM using reduce and lambda\n",
+    "lcm = reduce(lambda a, b: a * b // gcd(a, b), arr)\n",
+    "\n",
+    "print(\"LCM of the array:\", lcm)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "from math import gcd\n",
+    "n = [1,2,3,4]\n",
+    "lcm = reduce(lambda a,b: a*b//gcd(a,b),n)\n",
+    "print(lcm)"
    ]
   },
   {
@@ -366,11 +451,6 @@
     "result = linear_search(arr, target)\n",
     "print(f'Target found at index: {result}')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -468,9 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153 its amstrong\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input())\n",
     "sum = 0\n",
@@ -487,9 +575,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amstrong\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input())\n",
     "a = num % 10  #3\n",
@@ -512,9 +608,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "\n",
@@ -526,36 +634,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 \n",
+      "8 8 \n",
+      "8 8 8 \n",
+      "8 8 8 8 \n",
+      "8 8 8 8 8 \n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "for i in range(n):\n",
     "    for j in range(i+1):\n",
-    "        print('*',end = ' ')\n",
+    "        print(\"8\",end = ' ')\n",
     "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# # # # # \n",
+      "# # # # \n",
+      "# # # \n",
+      "# # \n",
+      "# \n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "for i in range(n):\n",
     "    for j in range(i,n):\n",
     "        print(\"#\",end=\" \")\n",
-    "\n",
     "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          * \n",
+      "        * * \n",
+      "      * * * \n",
+      "    * * * * \n",
+      "  * * * * * \n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "for i in range(n):\n",
@@ -568,9 +711,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  * * * * * \n",
+      "    * * * * \n",
+      "      * * * \n",
+      "        * * \n",
+      "          * \n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "for i in range(n):\n",
@@ -583,9 +738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          * \n",
+      "        * * * \n",
+      "      * * * * * \n",
+      "    * * * * * * * \n",
+      "  * * * * * * * * * \n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "for i in range (n):\n",
@@ -600,9 +767,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  * * * * * * * * * \n",
+      "    * * * * * * * \n",
+      "      * * * * * \n",
+      "        * * * \n",
+      "          * \n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "for i in range(n):\n",
@@ -718,41 +897,6 @@
     "\n",
     "# Print the number of letters\n",
     "print(\"Number of letters in the string:\", letter_count)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get input from the user\n",
-    "input_string = input(\"Enter a string: \")\n",
-    "\n",
-    "# Initialize a dictionary to store letter counts\n",
-    "letter_count = {}\n",
-    "\n",
-    "# Loop through each character in the string\n",
-    "for char in input_string:\n",
-    "    # Check if the character is a letter\n",
-    "    if char.isalpha():\n",
-    "        # Convert the letter to lowercase for case-insensitive counting\n",
-    "        char = char.lower()\n",
-    "        # Update the count in the dictionary\n",
-    "        if char in letter_count:\n",
-    "            letter_count[char] += 1\n",
-    "        else:\n",
-    "            letter_count[char] = 1\n",
-    "\n",
-    "# Calculate the total number of letters\n",
-    "total_letters = sum(letter_count.values())\n",
-    "\n",
-    "# Print the total number of letters\n",
-    "print(\"Total number of letters in the string:\", total_letters)\n",
-    "\n",
-    "# Print the count of each letter\n",
-    "for letter, count in letter_count.items():\n",
-    "    print(f\"Letter '{letter}' appears {count} times\")\n"
    ]
   },
   {
@@ -1174,17 +1318,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hel = input()\n",
     "no = input()\n",
@@ -1194,6 +1330,235 @@
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"false\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LARGEST DIGIT FROM A NUMBER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n= input()\n",
+    "lol = str(n)\n",
+    "lis =[]\n",
+    "for i in lol:\n",
+    "    lis.append(int(i))\n",
+    "print(max(lis))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MAXIMUM SUM OF SUBARRAYS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = list(map(int, input(\"Enter elements of array separated by space: \").split()))\n",
+    "max_sum = float('-inf')  # Smallest possible number\n",
+    "current_sum = 0\n",
+    "\n",
+    "for num in arr:\n",
+    "    current_sum = max(num, current_sum + num)\n",
+    "    max_sum = max(max_sum, current_sum)\n",
+    "\n",
+    "print(\"Maximum Subarray Sum:\", max_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PRINT SUBARRAYS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [1, 2, 3, 4]\n",
+    "\n",
+    "n = len(arr)\n",
+    "\n",
+    "for i in range(n):  # Starting index of subarray\n",
+    "    for j in range(i, n):  # Ending index of subarray\n",
+    "        print(arr[i:j+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = [1,2,3,4]\n",
+    "m = len(n)\n",
+    "for i in range(m):\n",
+    "    for j in range(i,m):\n",
+    "        print(n[i:j+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = int(input())\n",
+    "n = int(input())\n",
+    "dm = 0\n",
+    "ndm = 0\n",
+    "for i in range(1,n+1):\n",
+    "    if i % m == 0:\n",
+    "        dm+=i\n",
+    "    else:\n",
+    "        ndm+=i\n",
+    "diff = ndm - dm\n",
+    "print(diff)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr=list(map(int,input().split()))\n",
+    "if len(arr)<3:\n",
+    "    result= 0\n",
+    "else:\n",
+    "    oe = [arr[i] for i in range(len(arr)) if i % 2 != 0]\n",
+    "    ee = [arr[i] for i in range(len(arr)) if i % 2 == 0]\n",
+    "\n",
+    "if len(oe)<2 or len(ee)<2:\n",
+    "    result = 0\n",
+    "else:\n",
+    "    oe.sort()\n",
+    "    ee.sort(reverse=True)\n",
+    "print(oe[1]+ee[1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sum of digits after converting into binary`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "bi = bin(n)[2:]\n",
+    "lol = sum(int(dig) for dig in bi)\n",
+    "print(lol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LEAPYEAR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leap\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "if (n%4==0 and n%100!=0) or (n%400 == 0):\n",
+    "    print(\"Leap\")\n",
+    "else:\n",
+    "    print(\"non leap\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PERFECT NUMBER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5]\n",
+      "not perfect number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "s= []\n",
+    "for i in range(1,n):\n",
+    "    if n%i==0:\n",
+    "        s.append(i)\n",
+    "print(s)\n",
+    "h= sum(s)\n",
+    "if n == h:\n",
+    "    print(\"perfect number\")\n",
+    "else:\n",
+    "    print(\"not perfect number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MAXPRODUCT OF 3 NUM IN ARRAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "504\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = list(map(int,input().split()))\n",
+    "n.sort()\n",
+    "mp = max(n[-1]*n[-2]*n[-3],n[0]*n[1]*n[-1])\n",
+    "print(mp)"
    ]
   }
  ],
