practiced some more codes

--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -1227,9 +1227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Love Calculator is calculating your score...\n",
+      "Your score is 22, you are alright together.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The Love Calculator is calculating your score...\")\n",
     "name1 = input()\n",
@@ -1341,9 +1350,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "1234\n"
+     ]
+    }
+   ],
    "source": [
     "n= input()\n",
     "lol = str(n)\n",
@@ -1362,9 +1380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum Subarray Sum: 21\n"
+     ]
+    }
+   ],
    "source": [
     "arr = list(map(int, input(\"Enter elements of array separated by space: \").split()))\n",
     "max_sum = float('-inf')  # Smallest possible number\n",
@@ -1386,9 +1412,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 2]\n",
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 4]\n",
+      "[2]\n",
+      "[2, 3]\n",
+      "[2, 3, 4]\n",
+      "[3]\n",
+      "[3, 4]\n",
+      "[4]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = [1, 2, 3, 4]\n",
     "\n",
