--- a/TCS_NQT.IPYNB
+++ b/TCS_NQT.IPYNB
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,14 +574,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 5 10\n"
+      "1 3 5 15\n"
      ]
     }
    ],
@@ -592,6 +592,70 @@
     "    if n%i==0:\n",
     "        div.append(i)\n",
     "print(' '.join(map(str,div)))#remove the comas and brackets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lcm of 2 numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "s =a\n",
+    "v = b\n",
+    "while a:\n",
+    "    b,a = a,b%a\n",
+    "c = b\n",
+    "d = (s*v)//c\n",
+    "print(d)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sliding window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 4, 5, 5, 5, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = list(map(int, input().split()))\n",
+    "k=int(input())\n",
+    "m=0\n",
+    "b=[]\n",
+    "for i in range(len(arr)-(k-1)):\n",
+    "    m =max(arr[i:i+k])\n",
+    "    b.append(m)\n",
+    "print(b)"
    ]
   }
  ],
