--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -1603,6 +1603,69 @@
     "mp = max(n[-1]*n[-2]*n[-3],n[0]*n[1]*n[-1])\n",
     "print(mp)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''def subash(a,b):\n",
+    "    c = a+b\n",
+    "    print(c)\n",
+    "subash(6,5)'''\n",
+    "\n",
+    "\n",
+    "def mul(n1,n2):\n",
+    "    return n1*n2\n",
+    "x = mul(2,3)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gun(*arwgs):\n",
+    "    sums = 0\n",
+    "    for i in arwgs:\n",
+    "        sums = sums+i\n",
+    "    return sums\n",
+    "\n",
+    "print(gun(1,2,3,4,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
