--- a/restart.ipynb
+++ b/restart.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
     "numbers = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
     "symbols = ['!', '#', '$', '%', '&', '(', ')', '*', '+']\n",
     "\n",
-    "print(\"Welcome to the PyPassword Generator!\")\n",
+    "print(\"Welcome to my Password Generator!\")\n",
     "nr_letters= int(input(\"How many letters would you like in your password?\\n\")) \n",
     "nr_symbols = int(input(f\"How many symbols would you like?\\n\"))\n",
     "nr_numbers = int(input(f\"How many numbers would you like?\\n\"))\n",
@@ -144,13 +144,6 @@
     "for char in password:\n",
     "    print(char,end = '')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
