--- a/Practice1.ipynb
+++ b/Practice1.ipynb
@@ -224,9 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 "
+     ]
+    }
+   ],
    "source": [
     "# Function to print Fibonacci series up to 'n' terms\n",
     "def fibonacci(n):\n",
@@ -357,27 +365,6 @@
     "    a,b = b,a+b\n",
     "    total = total+b\n",
     "print(total)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = [1,2,3]\n",
-    "t = 0\n",
-    "for i in n:\n",
-    "    t = t+i\n",
-    "print(t)"
    ]
   },
   {
@@ -1227,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1222,8 @@
      "output_type": "stream",
      "text": [
       "The Love Calculator is calculating your score...\n",
-      "Your score is 22, you are alright together.\n"
+      "samsubash\n",
+      "Your score is 10, you are alright together.\n"
      ]
     }
    ],
@@ -1244,6 +1232,7 @@
     "name1 = input()\n",
     "name2 = input() \n",
     "hello = name1.lower()+name2.lower()\n",
+    "print(hello)\n",
     "t=hello.count(\"t\")\n",
     "r=hello.count(\"r\")\n",
     "u=hello.count(\"u\")\n",
@@ -1586,14 +1575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "504\n"
+      "6\n"
      ]
     }
    ],
@@ -1662,10 +1651,292 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [2,4,1,6]\n",
+    "maxnum = num[0]\n",
+    "for i in range(len(num)):\n",
+    "    if num[i] > maxnum:\n",
+    "        maxnum = num[i]\n",
+    "print(maxnum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "fact = 1\n",
+    "for i in range(1,n+1):\n",
+    "    fact*=i\n",
+    "\n",
+    "print(fact)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibo(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibo(n-1)+fibo(n-2)\n",
+    "    \n",
+    "print(fibo(10))\n",
+    "\n",
+    "n = 10\n",
+    "for i in range(n+1):\n",
+    "    print(fibo(i))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nums(n):\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n+nums(n-1)\n",
+    "print(nums(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olleh\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_string(s):\n",
+    "    # Base case: if the string is empty or has one character, return it\n",
+    "    if len(s) == 0 or len(s) == 1:\n",
+    "        return s\n",
+    "    else:\n",
+    "        # Recursive case: reverse the rest of the string and add the first character to the end\n",
+    "        return reverse_string(s[1:]) + s[0]\n",
+    "\n",
+    "# Test the function\n",
+    "print(reverse_string(\"hello\"))  # Output will be \"olleh\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def reverse(self, x: int) -> int:\n",
+    "        s = int(str(x)[::-1])\n",
+    "        return s\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lcm and hcf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lcmAndGcd(self, a : int, b : int) -> List[int]:\n",
+    "        def gcd(x,y):\n",
+    "            while y!=0:\n",
+    "                x,y = y,x%y\n",
+    "            return x\n",
+    "        gcdval = gcd(a,b)\n",
+    "            \n",
+    "        lcmval = (a*b)//gcdval\n",
+    "        return [lcmval,gcdval]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "akashsabus\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"subashsaka\"\n",
+    "ans = \"\"\n",
+    "b = len(a)\n",
+    "for i in range(b-1,-1,-1):\n",
+    "    ans = ans+a[i]\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubashsaka\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(a)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(a\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)):\n\u001b[0;32m      5\u001b[0m     l \u001b[38;5;241m=\u001b[39m a[i]\n\u001b[0;32m      6\u001b[0m     r \u001b[38;5;241m=\u001b[39m a[b\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"subashsaka\"\n",
+    "b = len(a)\n",
+    "for i in range(len(a-1)):\n",
+    "    l = a[i]\n",
+    "    r = a[b-1-1]\n",
+    "print(l , r)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10 \n",
+    "ans = 0\n",
+    "\n",
+    "#Write your code here to calculate and return sum of n number.\n",
+    "for i in range(n+1):\n",
+    "    ans = ans+i\n",
+    "\n",
+    "print(ans) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#User function Template for python3\n",
+    "\n",
+    "class Solution:\n",
+    "    \n",
+    "    def capCount(self,s):\n",
+    "        # Code here to print after captilizing first letter of all string\n",
+    "        # and then print the count of number of words\n",
+    "        # Your code should provide a new line after printing\n",
+    "       \n",
+    "        s1 = s.split(\" \")\n",
+    "       # print(s1)\n",
+    "        for word in s1:\n",
+    "            \n",
+    "            #print(word)\n",
+    "            w1 = word[0].upper()\n",
+    "            print(w1+word[1:].lower(), end=\" \")\n",
+    "        print()\n",
+    "        print(len(s1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food = []\n",
+    "price = []\n",
+    "while True:\n",
+    "    items = input((\"Enter the food you want to buy or enter Q to quit shopping.\\n\"))\n",
+    "    if items.lower() == \"q\":\n",
+    "        break\n",
+    "    else:\n",
+    "        rate = float(input(f\"Enter the price of {items} $\\n\"))\n",
+    "        food.append(items)\n",
+    "        price.append(rate)\n",
+    "print(\"--------YOUR ITEMS IN CART----------\")\n",
+    "print(food)\n",
+    "print(\"The total bill of your cart is\",sum(price))"
+   ]
   }
  ],
  "metadata": {
