--- a/Practice2.ipynb
+++ b/Practice2.ipynb
@@ -144,6 +144,116 @@
     "for char in password:\n",
     "    print(char,end = '')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi iam subash..\n",
+      "curently pursuing bachleors of engineering in \n",
+      "electronics and communication with the cgpa of 8.09\n",
+      "my faviorite subject from my branch is computer networks\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = open(\"hello.txt\")\n",
+    "print(h.read())\n",
+    "for x in h:\n",
+    "    print(x)\n",
+    "h.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi iam subash..\n",
+      "curently pursuing bachleors of engineering in \n",
+      "electronics and communication with the cgpa of 8.09\n",
+      "my faviorite subject from my branch is computer networksiam nobodyiam nobodyiam nobody\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = open(\"hello.txt\",\"a\")\n",
+    "h.write(\"iam nobody\")\n",
+    "h.close()\n",
+    "h= open(\"hello.txt\",\"r\")\n",
+    "print(h.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"lolly.txt\",\"x\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellothere\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = open(\"lolly.txt\",\"w\")\n",
+    "h.write(\"hellothere\")\n",
+    "h.close()\n",
+    "h = open(\"lolly.txt\",\"r\")\n",
+    "print(h.read())\n",
+    "h.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[WinError 32] The process cannot access the file because it is being used by another process: 'lolly.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[32], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m os\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlolly.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mPermissionError\u001b[0m: [WinError 32] The process cannot access the file because it is being used by another process: 'lolly.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.remove(\"lolly.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h"
+   ]
   }
  ],
  "metadata": {
